<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:text="@string/AboutDev"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialogImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/dialogTitle"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/dialogTitle"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/dialogAbout"
        android:layout_width="370dp"
        android:layout_height="276dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/AboutDesc"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/dialogImage"
        app:layout_constraintStart_toStartOf="@+id/dialogImage"
        app:layout_constraintTop_toBottomOf="@+id/dialogImage" />

    <TextView
        android:id="@+id/dialogBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Back"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>